# patchwork

./: .env.example  .gitignore  BUILD_PLAN.md  LICENSE  README.md  REVIEW.md  pyproject.toml
diagrams/: 01-complete-flow.md  01-complete-flow.mmd  02-agent-orchestration.md  02-agent-orchestration.mmd  03-data-flow-architecture.md  03-data-flow-architecture.mmd  04-agent-responsibilities.md  04-agent-responsibilities.mmd  diagrams-viewer.html
examples/: hello_feature.md
patchwork/: agent_cli.py  cli.py  config.py  eval.py  memory.py  models.py  patch.py  reviewer.py  router.py  tracing.py
patchwork/backends/: __init__.py  base.py  claude.py  codex.py  gemini.py
tests/: test_cli.py  test_models.py  test_patch.py  test_router.py
