[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchwork"
version = "0.1.0"
description = "Observability-first orchestrator for AI coding assistants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    "google-genai>=0.7.0",
    "langfuse>=2.30.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
patchwork = "patchwork.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
